[gd_scene load_steps=25 format=3 uid="uid://8g4rqk32k7dr"]

[ext_resource type="Script" path="res://Scenes/Player/player_character.gd" id="1_p0k1w"]
[ext_resource type="PackedScene" uid="uid://bdx44wrt3xm8c" path="res://AssetPacks/Weapon Pack/Models/GLTF format/shotgun.glb" id="2_7kono"]
[ext_resource type="Script" path="res://Scenes/Player/StateActionMoving.gd" id="2_atn8p"]
[ext_resource type="Script" path="res://AssetPacks/Weapon Pack/Models/GLTF format/shotgun_aim_look.gd" id="3_mpd6e"]
[ext_resource type="Script" path="res://Scenes/Player/StateMovementDisabled.gd" id="3_umcdw"]
[ext_resource type="Script" path="res://Scenes/Player/StateShotgunAiming.gd" id="4_20t4b"]
[ext_resource type="PackedScene" uid="uid://cficfkd5kqel4" path="res://Scenes/VFX/shotgun_hit_vfx.tscn" id="7_rxxiv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gcgtu"]

[sub_resource type="Gradient" id="Gradient_4yi1w"]
offsets = PackedFloat32Array(0, 0.588496, 0.774336)
colors = PackedColorArray(1, 1, 1, 1, 0.487335, 0.487335, 0.487335, 1, 0.325441, 0.325441, 0.325441, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xi0pw"]
gradient = SubResource("Gradient_4yi1w")

[sub_resource type="Curve" id="Curve_iaj4x"]
max_value = 3.0
_data = [Vector2(0, 3), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_umyhy"]
curve = SubResource("Curve_iaj4x")

[sub_resource type="Curve" id="Curve_n3ur6"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.102362, 1), 0.0, 0.0, 0, 0, Vector2(0.791339, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_gvtc0"]
curve = SubResource("Curve_n3ur6")

[sub_resource type="Curve" id="Curve_3n1nd"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.304511, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_2caao"]
curve = SubResource("Curve_3n1nd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5t6hh"]
inherit_velocity_ratio = 1.0
direction = Vector3(0, 0, 1)
initial_velocity_min = 2.0
initial_velocity_max = 6.0
gravity = Vector3(0, 1, 0)
scale_min = 0.1
scale_max = 1.3
scale_curve = SubResource("CurveTexture_gvtc0")
color = Color(1, 1, 0, 1)
color_ramp = SubResource("GradientTexture1D_xi0pw")
emission_curve = SubResource("CurveTexture_umyhy")
hue_variation_min = -0.21
hue_variation_max = 0.26
turbulence_enabled = true
turbulence_noise_strength = 2.9
turbulence_noise_speed = Vector3(0, 1.755, 0)
turbulence_influence_max = 0.14
turbulence_influence_over_life = SubResource("CurveTexture_2caao")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lgxlv"]
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_oyjkr"]
material = SubResource("StandardMaterial3D_lgxlv")
radius = 0.01
height = 0.02

[sub_resource type="Animation" id="Animation_n5fie"]
resource_name = "Idle"
length = 5.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VirtualCamera3D/Marker3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.06, -0.23, -0.155), Vector3(0.095, -0.24, -0.155), Vector3(0.06, -0.23, -0.155)]
}

[sub_resource type="Animation" id="Animation_ghlk0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VirtualCamera3D/Marker3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.06, -0.195, -0.155)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VirtualCamera3D/Marker3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_dhrr4"]
resource_name = "shoot"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VirtualCamera3D/Marker3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.06, -0.195, -0.155), Vector3(0.06, -0.195, -0.155), Vector3(0.06, -0.195, -0.155)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VirtualCamera3D/Marker3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -3.14159, 0), Vector3(-0.811578, -3.14159, 0), Vector3(-0.811578, -3.14159, 0), Vector3(0, -3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_ktcr0"]
resource_name = "walking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VirtualCamera3D/Marker3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.06, -0.195, -0.155), Vector3(0.06, -0.23, -0.155), Vector3(0.06, -0.195, -0.155)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r02sv"]
_data = {
"Idle": SubResource("Animation_n5fie"),
"RESET": SubResource("Animation_ghlk0"),
"shoot": SubResource("Animation_dhrr4"),
"walking": SubResource("Animation_ktcr0")
}

[node name="PlayerCharacter" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_p0k1w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_gcgtu")

[node name="VirtualCamera3D" type="VirtualCamera3D" parent="."]
use_lerp = false
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.637243, 0)

[node name="InteractRaycast3D" type="InteractRaycast3D" parent="VirtualCamera3D"]
target_position = Vector3(0, 0, -3)
hit_back_faces = false
collide_with_areas = true

[node name="Marker3D" type="Marker3D" parent="VirtualCamera3D"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0.06, -0.195, -0.155)

[node name="shotgun2" parent="VirtualCamera3D/Marker3D" instance=ExtResource("2_7kono")]
script = ExtResource("3_mpd6e")
sway_max_deg = 10.0

[node name="MuzzleFlash" type="GPUParticles3D" parent="VirtualCamera3D/Marker3D/shotgun2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.41333e-07, 0.131421, 0.285838)
emitting = false
amount = 16
lifetime = 0.2
one_shot = true
explosiveness = 0.91
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_5t6hh")
draw_pass_1 = SubResource("SphereMesh_oyjkr")

[node name="Camera3D" type="Camera3D" parent="VirtualCamera3D"]
near = 0.001

[node name="FiniteStateMachine" type="FiniteStateMachine" parent="." node_paths=PackedStringArray("current")]
tick_mode = 1
current = NodePath("StateActionMoving")

[node name="StateActionMoving" type="FiniteState" parent="FiniteStateMachine"]
script = ExtResource("2_atn8p")

[node name="StateMovementDisabled" type="FiniteState" parent="FiniteStateMachine"]
script = ExtResource("3_umcdw")

[node name="StateShotgunAiming" type="FiniteState" parent="FiniteStateMachine"]
script = ExtResource("4_20t4b")
shotgun_spread_angle_degrees = 5.0
shotgun_range = 50.0
shotgun_hit_solid_vfx = ExtResource("7_rxxiv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r02sv")
}
autoplay = "walking"

[connection signal="can_interact" from="VirtualCamera3D/InteractRaycast3D" to="FiniteStateMachine/StateActionMoving" method="_on_interact_raycast_3d_can_interact" flags=3]
